--- a/overseas/overseas/overseasApp/templates/overseasApp/home.html
+++ b/overseas/overseas/overseasApp/templates/overseasApp/home.html
@@ -284,6 +284,7 @@
         <!-- div8 end -->
 
         <!-- div9 -->
+        <div id="div9_study_abroad"></div>
         <div class="container" id="div3">
             <div class="row">
                 <div id="div9-para" class="col-sm-6">
