--- a/overseas/overseas/overseasApp/templates/overseasApp/base.html
+++ b/overseas/overseas/overseasApp/templates/overseasApp/base.html
@@ -68,9 +68,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Documents</a>
                         </li> {% endcomment %}
-                        <li class="nav-item">
+                        {% comment %} <li class="nav-item">
                             <a class="nav-link" href="{% url 'about_us' %}">About us</a>
-                        </li>
+                        </li> {% endcomment %}
 
                     </ul>
                     <!-- <form class="d-flex">
